--- a/style.css
+++ b/style.css
@@ -79,8 +79,8 @@ body::-webkit-scrollbar-thumb {
     color: rgb(41, 41, 101);
     font-weight: 600;
     text-align: center;
-    padding: 0 3rem;
-    padding-top: 2rem;
+    margin: 4rem 3rem;
+    border: 2px solid rgb(255, 255, 255);
 }
 .picture {
     width: fit-content;
@@ -116,8 +116,7 @@ body::-webkit-scrollbar-thumb {
     }
     .about > p {
         color: white;
-        padding-top: 2rem;
-        padding-bottom: 5rem;
+        padding: 4rem 3rem;
     }
     .contact {
         display: flex;
